--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "badger-modal",
+  "name": "@roma_borsuk/badger-modal",
   "version": "1.1.1",
   "description": "Accessible modal dialog Pure JS Component",
   "main": "./dist/badger-modal.js",
   "module": "./dist/badger-modal.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/roma-borsuk/badger-modal.git"
+    "url": "git+https://github.com/roma-borsuk/badger-modal.git"
   },
   "homepage": "https://github.com/roma-borsuk/badger-modal",
-  "bugs": "https://github.com/roma-borsuk/badger-modal/issues",
-  "author": {
-    "name": "Roman Borsuk",
-    "email": "borroman14@gmail.com",
-    "url": "https://github.com/roma-borsuk"
+  "bugs": {
+    "url": "https://github.com/roma-borsuk/badger-modal/issues"
   },
+  "author": "Roman Borsuk <borroman14@gmail.com> (https://github.com/roma-borsuk)",
   "keywords": [
     "modal",
     "dialog",
@@ -41,5 +39,11 @@
     "sass-loader": "^13.0.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
