--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@roma_borsuk/badger-modal",
+  "name": "badger-modal",
   "version": "1.1.1",
   "description": "Accessible modal dialog Pure JS Component",
   "main": "./dist/badger-modal.js",
