--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 .DS_Store
-.history
-.vscode
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 .idea
+.vscode
+
+dist
 node_modules
