--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
     "autoprefixer": "^10.4.11",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -37,6 +38,8 @@
     "postcss-loader": "^7.0.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
@@ -44,6 +47,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
   }
 }
