--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "autoprefixer": "^10.4.11",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.13",
     "mini-css-extract-plugin": "^2.6.1",
@@ -48,6 +49,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "docs": "webpack --config webpack.config.js && cp ./dist/badger-modal.css ./docs &&  cp ./dist/badger-modal.js ./docs"
   }
 }
