--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build
 on:
   push:
-    branches: [master]
+    branches: [main]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -23,4 +23,4 @@ jobs:
         env:
           CI: true
       - name: Run build
-        run: yarn build
+        run: yarn docs
