--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "eventemitter3": "^4.0.7"
   },
+  "files": [
+    "dist/**/*"
+  ],
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
@@ -50,6 +53,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
+    "prepack": "yarn build",
     "docs": "webpack --config webpack.config.js && cp ./dist/badger-modal.css ./docs &&  cp ./dist/badger-modal.js ./docs"
   }
 }
