--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Check
 on:
   push:
     branches: [main]
@@ -23,4 +23,4 @@ jobs:
         env:
           CI: true
       - name: Run build
-        run: yarn docs
+        run: yarn build
