--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,5 @@
 name: Check
-on:
-  push:
-    branches: [main]
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,15 +10,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
-      - name: Setup .yarnrc.yml
-        run: |
-          yarn config set npmAuthToken $NPM_TOKEN
-          yarn config set npmAlwaysAuth true
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Install
         run: yarn install --immutable
         env:
           CI: true
-      - name: Run build
-        run: yarn build
+      - name: Pack
+        run: yarn pack
