--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,6 +24,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '18.x'
+      - name: Install
+        run: yarn install --immutable
+        env:
+          CI: true
+      - name: Build
+        run: yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
