--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -1,7 +1,8 @@
 name: Publish to NPM
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+    - '*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,3 +31,7 @@ jobs:
         run: yarn npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
