--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badger-modal",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Accessible modal dialog Pure JS Component",
   "main": "./dist/badger-modal.cjs.js",
   "types": "./dist/index.d.ts",
@@ -37,6 +37,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.13",
+    "ignore-emit-webpack-plugin": "^2.0.6",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass-magic-importer": "^5.3.2",
     "postcss-loader": "^7.0.1",
