--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,8 @@
 name: Check
-on: [push, pull_request]
+on:
+  [push, pull_request]:
+    branches:
+      [main]
 jobs:
   build:
     runs-on: ubuntu-latest
