--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,8 +1,9 @@
 name: Check
 on:
-  [push, pull_request]:
-    branches:
-      [main]
+  pull_request:
+    branches: [main]
+  push:
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
